--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,55 @@ header {
 #myBtn:hover {
 	background-color: red; /* Add a dark-grey background on hover */
 }
+
+h1 {
+	margin-top: 20px;
+	color:blue;
+	border: blueviolet solid;
+}
+
+table.productContainer {
+	width: 1450px;
+	margin-left: auto;
+	margin-right: auto;
+	border: 2px solid black;
+}
+
+table.productContainer td {
+	align-content: center;
+	justify-content: center;
+	text-align: center;
+	border: 2px solid orange;
+}
+
+div.imgContainer {
+	padding: 40px;
+}
+
+.IMG {
+	width: 90%;
+	transition: transform 0.2s;
+}
+
+.IMG:hover {
+	transform: scale(1.2);
+}
+
+td.productName {
+	padding: 10px;
+}
+
+td.productPrice {
+	padding: 5px;
+}
+
+button.addToCart {
+	margin: 5px;
+	background-color: white;
+	border: none;
+}
+
+button.addToCart:hover {
+	cursor: pointer;
+	color: red
+}
