--- a/Product_Description.css
+++ b/Product_Description.css
@@ -5,8 +5,7 @@
 }
 
 body {
-  
-    background: #aedaa6;
+    /* background: #aedaa6; */
     font-family: "Raleway";
 }
 
@@ -27,7 +26,7 @@ body {
     box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-nav {
+nav.productNav {
     width: 100%;
     color: #727272;
     text-transform: uppercase;
@@ -65,7 +64,7 @@ svg.arrow {
 }
 
 .photo img { 
-    max-height: 324px; 
+    height: 324px; 
 }
 
 .description {
@@ -154,7 +153,7 @@ svg.arrow {
     transition: all 0.3s ease;
     font-weight: 500;
 }
-    
+
 .description button:hover {
     background: darken(white, 2%);
     border: 1px solid #aedaa6;
@@ -165,6 +164,7 @@ svg.arrow {
 
 .reviewTitle {
     text-align: center;
+    margin-top: 5px;
 }
 
 .review {
