--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ header {
 	height: 100px;
 	background: #262626;
 	width: 100%;
-	z-index: 10;
+	z-index: 101;
 	position: fixed;
 }
 
@@ -48,6 +48,64 @@ header {
 	line-height: 100px;
  	margin-right: 10%;
 	color: white;
+}
+
+.nav-top ul {
+	float: left;
+}
+
+.nav-top ul li {
+	float: left;
+	list-style: none;
+	text-decoration: none;
+	display: block;
+	position: relative;
+}
+
+.nav-top ul li a {
+	font-family: 'Sora', sans-serif;
+	color: white;
+	text-decoration: none;
+}
+
+.nav-top ul li ul {
+	display: none;
+	position: absolute;
+	background-color: #353535;
+	padding: 10px 30px;
+	margin-top: -4px;
+	right: 2px;
+}
+
+.nav-top ul li:hover ul {
+	display: block;
+}
+
+.nav-top ul li ul a {
+	padding: 20px 20px;
+	font-size: 26px;
+	text-align: right;
+	float: right;
+	position: relative;
+}
+
+.nav-top ul li ul li {
+	width: 110px;
+	left: 10px;
+}
+
+.nav-top ul li ul li a {
+	padding: 10px 45px;
+	font-size: 24px;
+	line-height: 30px;
+	left: 50px;
+}
+
+.nav-top ul li ul li a:hover {
+	background-color: #474747;
+	padding: 10px 45px;
+	width: 140%;
+	left: 10px;
 }
 
 .nav-bot {
@@ -95,7 +153,7 @@ header {
 }
 
 .nav-bot ul li ul li {
-	width: 150px;
+	width: 120px;
 }
 
 .nav-bot ul li ul li a {
@@ -106,7 +164,7 @@ header {
 
 .nav-bot ul li ul li a:hover {
 	background-color: #535353;
-	width: 120px;
+	width: 100%;
 }
 
 .nav-top-text {
